--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,7 @@
 # backend/.env.example
 
 PORT=5000
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/DB_NAME?schema=public"
+DATABASE_URL="file:./dev.db"
 JWT_SECRET=your-secret-key-here
 ALLOW_ADMIN_REGISTER=true
-CORS_ORIGIN=http://localhost:5173
 
