--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
 # backend/.env.example
 
 PORT=5000
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/DB_NAME?schema=public"
 JWT_SECRET=your-secret-key-here
 ALLOW_ADMIN_REGISTER=true
+CORS_ORIGIN=http://localhost:5173
+UPLOADS_DIR=./uploads
 
