Add Cloudinary uploads

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,4 +6,8 @@ JWT_SECRET=your-secret-key-here
 ALLOW_ADMIN_REGISTER=true
 CORS_ORIGIN=http://localhost:5173
 UPLOADS_DIR=./uploads
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_FOLDER=imperii
 
