--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^5.10.2",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "express-validator": "^7.0.1",
-    "@prisma/client": "^5.10.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -29,4 +30,3 @@
     "prisma": "^5.10.2"
   }
 }
-
